# installer

./: Cargo.toml  README.md
.github/workflows/: release.yaml  test.yaml
scripts/: install.ps1  install.sh
src/: downloader.rs  main.rs  utils.rs
src/commands/: install.rs  mod.rs
src/downloader/: mod.rs
src/installer/: mod.rs  unix.rs  windows.rs
src/platform/: mod.rs
tests/: installation.rs  macos.rs
