[package]
name = "biome-installer"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
anyhow = "1.0.98"
atty = "0.2.14"
clap = { version = "4.5.40", features = ["cargo", "derive", "string", "env"] }
colored = "3.0.0"
home = "0.5.11"
homedir = "0.3.6"
inquire = "0.7.5"
predicates = "3.1.3"
reqwest = { version = "0.12.22", default-features = false, features = [
    "http2",
    "blocking",
    "rustls-tls",
] }
semver = "1.0.26"
spinners = "4.1.1"
tempfile = "3.20.0"

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
